--- a/index.html
+++ b/index.html
@@ -3,27 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic Tac Toe</title>
+    <title>Tic Tac Toe Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="cell" onclick="makeMove(this, 0)"></div>
-            <div class="cell" onclick="makeMove(this, 1)"></div>
-            <div class="cell" onclick="makeMove(this, 2)"></div>
-        </div>
-        <div class="row">
-            <div class="cell" onclick="makeMove(this, 3)"></div>
-            <div class="cell" onclick="makeMove(this, 4)"></div>
-            <div class="cell" onclick="makeMove(this, 5)"></div>
-        </div>
-        <div class="row">
-            <div class="cell" onclick="makeMove(this, 6)"></div>
-            <div class="cell" onclick="makeMove(this, 7)"></div>
-            <div class="cell" onclick="makeMove(this, 8)"></div>
-        </div>
+    <div class="msg-container hide">
+        <p  id="msg">Winner</p>
+        <button id="new-btn">New Game</button>
     </div>
-    <script src="script.js"></script>
+    <main>
+    <h1>Tic Tac Toe</h1>
+<div class="container">
+<div class="game">
+    <button class="box"></button>
+    <button class="box"></button>
+    <button class="box"></button>
+    <button class="box"></button>
+    <button class="box"></button>
+    <button class="box"></button>
+    <button class="box"></button>
+    <button class="box"></button>
+    <button class="box"></button>
+</div>
+</div>
+<button id="reset-btn">Reset Game</button>
+</main>
+<script src="first.js"></script>
 </body>
 </html>
